@@ -109,6 +109,7 @@ MapTheme *theme_get_current(void);
 GList *theme_get_list(void);
 void themes_init(void);
 void theme_register_callback(GCallback callback);
+void themes_cleanup(void);
 
 GdkPixmap *theme_get_terrain_pixmap(Terrain terrain);
 
