@@ -1,3 +1,7 @@
+2012-04-27  Roland Clobus <rlobus@rclobus.nl>
+	* server/gtk/main.c, client/gtk/offline.c, editor/gtk/editor.c,
+	common/gtk/theme.c, common/gtk/theme.h: Cleanup themes for valgrind.
+
 2012-04-06  Roland Clobus <rclobus@rclobus.nl>
 	* editor/gtk/editor.c: Added a file filter.
 
